[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/objects/soul.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level1/Soul.gd" type="Script" id=2]
[ext_resource path="res://Assets/ui/nullicon.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.85249
height = 8.88107

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.51091
height = 6.37471

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 14, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 28, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 70, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "Collected",
"speed": 10.0
} ]

[node name="Soul" type="Node2D" groups=[
"Interactable",
]]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.0954361, -0.127275 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="icon" type="AnimatedSprite" parent="."]
position = Vector2( 0, -11 )
frames = SubResource( 11 )
animation = "idle"
frame = 1
playing = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="icon" to="." method="_on_icon_animation_finished"]
